--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/vercel": "^8.0.7",
+    "@astrojs/vercel": "^8.0.8",
     "@tailwindcss/vite": "^4.0.6",
-    "astro": "^5.3.0",
-    "tailwindcss": "^4.0.6"
+    "astro": "^5.3.1",
+    "tailwindcss": "^4.0.6",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "tailwindcss-animated": "^2.0.0"
   }
 }
